Use local image path

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <h3>Preview</h3>
 
-<p><img src="http://www.dunnkers.com/dunkpathmaker/dunkpathmaker-preview.gif" alt="DunkPathMaker Preview"></p>
+<p><img src="images/dunkpathmaker-preview.gif" alt="DunkPathMaker Preview"></p>
       </section>
     </div>
 
