Capitalize application title

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Dunkpathmaker : A useful tool for RuneScape bot scripters" />
+    <meta name="description" content="DunkPathMaker : A useful tool for RuneScape bot scripters" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Dunkpathmaker</title>
+    <title>DunkPathMaker</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dunnkers/DunkPathMaker">View on GitHub</a>
 
-          <h1 id="project_title">Dunkpathmaker</h1>
+          <h1 id="project_title">DunkPathMaker</h1>
           <h2 id="project_tagline">A useful tool for RuneScape bot scripters</h2>
 
             <section id="downloads">
@@ -44,7 +44,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Dunkpathmaker maintained by <a href="https://github.com/dunnkers">dunnkers</a></p>
+        <p class="copyright">DunkPathMaker maintained by <a href="https://github.com/dunnkers">dunnkers</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
