--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome</h3>
+        <h3>Creates your paths with ease!</h3>
 
-<p>Hello!</p>
+<p>This uses the world map to create paths, which makes it a very fast way to code a large walking task.</p>
+<p>Version 2.0: fully rewritten with support for the Old School map.</p>
 
 <h3>Preview</h3>
 
