Check if site even updates or Jekyll is not working

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ title: DunkPathMaker
             <p>{{ post.content }}</p>
         {% endFor %}
 
+        <h1>does.this.even.update?</h1>
+
         <h3>Creates your paths with ease!</h3>
 
 <p>This uses the world map to create paths, which makes it a very fast way to code a large walking task.</p>
