--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: DunkPathMaker
         <h3>Creates your paths with ease!</h3>
 
 <p>This uses the world map to create paths, which makes it a very fast way to code a large walking task.</p>
-<p>Version 2.0: fully rewritten with support for the Old School map.</p>
+<p>Version 2 is fully rewritten with support for the Old School map.</p>
 
 <h3>Preview</h3>
 
