Test if changed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: DunkPathMaker
             <p>{{ post.content }}</p>
         {% endFor %}
 
-        <h1>does.this.even.update?</h1>
+        <h1>does.this.even.update.really?</h1>
 
         <h3>Creates your paths with ease!</h3>
 
