--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@ title: DunkPathMaker
         {% for post in site.posts %}
             <p>{{ post.content }}</p>
         {% endFor %}
+
+        I don't think this does anything..
