--- a/index.html
+++ b/index.html
@@ -7,26 +7,25 @@
 	<meta name="description" content="DunkPathMaker : A useful tool for RuneScape bot scripters" />
 
 	<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-
+	<link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
 	<title>DunkPathMaker</title>
 </head>
 
 <body>
-
 	<!-- HEADER -->
-	<!--<div id="header_wrap" class="outer">
+	<div id="header_wrap" class="outer">
 		<header class="inner">
-		  <a id="forkme_banner" href="https://github.com/dunnkers/DunkPathMaker">View on GitHub</a>
+			<a id="forkme_banner" href="https://github.com/dunnkers/DunkPathMaker">View on GitHub</a>
 
-		  <h1 id="project_title">DunkPathMaker</h1>
-		  <h2 id="project_tagline">A useful tool for RuneScape bot scripters</h2>
+			<h1 id="project_title">DunkPathMaker</h1>
+			<h2 id="project_tagline">A useful tool for RuneScape bot scripters</h2>
 
 			<section id="downloads">
-			  <a class="zip_download_link" href="https://github.com/dunnkers/DunkPathMaker/zipball/master">Download this project as a .zip file</a>
-			  <a class="tar_download_link" href="https://github.com/dunnkers/DunkPathMaker/tarball/master">Download this project as a tar.gz file</a>
+				<a class="zip_download_link" href="https://github.com/dunnkers/DunkPathMaker/zipball/master">Download this project as a .zip file</a>
+				<a class="tar_download_link" href="https://github.com/dunnkers/DunkPathMaker/tarball/master">Download this project as a tar.gz file</a>
 			</section>
 		</header>
-	</div>-->
+	</div>
 
 	<!-- FORUMS -->
 	<h1>Visit the forums</h1>
@@ -41,19 +40,18 @@
 	</div>
 
 	<!-- MAIN CONTENT -->
-	<!--<div id="main_content_wrap" class="outer">
-	  <section id="main_content" class="inner">
-		  {{ content }}
-	  </section>
-  </div>-->
+	<div id="main_content_wrap" class="outer">
+		<section id="main_content" class="inner">
+			### Welcome\r\nHello!\r\n\r\n### Preview\r\n![DunkPathMaker Preview](http://www.dunnkers.com/dunkpathmaker/dunkpathmaker-preview.gif)\n###Forums\nVisit powerbot
+		</section>
+	</div>-->
 
-  <!-- FOOTER  -->
-	<!--<div id="footer_wrap" class="outer">
-	  <footer class="inner">
-		<p class="copyright">DunkPathMaker maintained by <a href="https://github.com/dunnkers">dunnkers</a></p>
-		<p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-	  </footer>
-  </div>-->
+	<!-- FOOTER  -->
+	<div id="footer_wrap" class="outer">
+		<footer class="inner">
+			<p class="copyright">DunkPathMaker maintained by <a href="https://github.com/dunnkers">dunnkers</a></p></p>
+		</footer>
+	</div>
 
 	<script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -65,7 +63,5 @@
 		pageTracker._trackPageview();
 	} catch(err) {}
 	</script>
-
-
 </body>
 </html>
