--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="DunkPathMaker : A useful tool for RuneScape bot scripters" />
 
-	<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
 	<title>DunkPathMaker</title>
 </head>
@@ -27,22 +27,21 @@
 		</header>
 	</div>
 
-	<!-- FORUMS -->
-	<h1>Visit the forums</h1>
-	<div class="row">
-		<div class="col-lg-4 col-md-offset-4">
-			<img src="http://fc08.deviantart.net/fs71/f/2013/019/d/4/powerbot__s_logo___redone_by_pitchgfx-d5s10ig.png
-			" alt="Bootstrap" style="width: 150px; height: 150px;">
-			<h2>Powerbot</h2>
-			<p>DunkPathMaker was released on Powerbot on October 20th.</p>
-			<p><a class="btn btn-primary btn-small" href="http://handlebarsjs.com/">Visit forum »</a></p>
-		</div>
-	</div>
-
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
-			### Welcome\r\nHello!\r\n\r\n### Preview\r\n![DunkPathMaker Preview](http://www.dunnkers.com/dunkpathmaker/dunkpathmaker-preview.gif)\n###Forums\nVisit powerbot
+			<h1>Visit the forums</h1>
+			<div class="row">
+				<div class="col-lg-4 col-md-offset-4">
+					<img src="http://fc08.deviantart.net/fs71/f/2013/019/d/4/powerbot__s_logo___redone_by_pitchgfx-d5s10ig.png
+					" alt="Bootstrap" style="width: 150px; height: 150px;">
+					<h2>Powerbot</h2>
+					<p>DunkPathMaker was released on Powerbot on October 20th.</p>
+					<p><a class="btn btn-primary btn-lg" href="http://handlebarsjs.com/">Visit forum »</a></p>
+				</div>
+			</div>
+			<h1>Posts</h1>
+			
 		</section>
 	</div>-->
 
